Transforming a sequencer strip with gizmos doesn't autokey its transform properties #93570

Closed
opened 2021-12-02 14:39:26 +01:00 by Hadrien Brissaud · 8 comments

System Information
Operating system: Windows-10-10.0.19042-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 970/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 496.13

Blender Version
Broken: version: 3.0.0 Release Candidate, branch: master, commit date: 2021-11-30 14:40, hash: 3788003cda
Worked: never (gizmos are newly introduced in the VSE)

Short description of error
Transforming a sequencer strip with gizmos doesn't autokey its transform properties, even though autokey is enabled

Exact steps for others to reproduce the error
Use the active translate gizmo in the sequencer editor to move the color strip around. It should autokey the transform properties shown in the sequencer sidebar, instead it leaves them unkeyed, as indicated by their orange backdrop
bug_sequencer_gizmo_transform_autokey_fail.blend

**System Information** Operating system: Windows-10-10.0.19042-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 970/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 496.13 **Blender Version** Broken: version: 3.0.0 Release Candidate, branch: master, commit date: 2021-11-30 14:40, hash: `3788003cda` Worked: never (gizmos are newly introduced in the VSE) **Short description of error** Transforming a sequencer strip with gizmos doesn't autokey its transform properties, even though autokey is enabled **Exact steps for others to reproduce the error** Use the active translate gizmo in the sequencer editor to move the color strip around. It should autokey the transform properties shown in the sequencer sidebar, instead it leaves them unkeyed, as indicated by their orange backdrop [bug_sequencer_gizmo_transform_autokey_fail.blend](https://archive.blender.org/developer/F12679553/bug_sequencer_gizmo_transform_autokey_fail.blend)

Added subscriber: @hadrien

Added subscriber: @hadrien
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Philipp Oeser self-assigned this 2021-12-02 15:15:04 +01:00
Member

Autokey only promises to work on objects, bones and masks.
So this is not a bug per se, but a good thing to have, so will look at that for 3.1 after 3.0 is out.

Autokey only promises to work on objects, bones and masks. So this is not a bug per se, but a good thing to have, so will look at that for 3.1 after 3.0 is out.

I didn't know that. In my experience autokey works fine pretty much everywhere (scene properties, shading and compositing nodes, and so on). Thanks for taking a look. It's only misleading because changing the property values directly does work.

I didn't know that. In my experience autokey works fine pretty much everywhere (scene properties, shading and compositing nodes, and so on). Thanks for taking a look. It's only misleading because changing the property values directly does work.
Member

Yep, should be fixed (and along with that the tooltip/description of autokey).

Yep, should be fixed (and along with that the tooltip/description of autokey).

This issue was referenced by ffd1a7d8c8

This issue was referenced by ffd1a7d8c81c65e75c8a0baf45d84375149d5387
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#93570
No description provided.